<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Fragment"
    tools:context=".presenter.fragments.home.HomeFragment">

    <TextView
        android:id="@+id/screenName"
        style="@style/Text.Subtitle"
        android:text="@string/home"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        style="@style/Text"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/signOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOut"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenName"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>