<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Alert">

    <TextView
        android:id="@+id/signOutTitle"
        style="@style/Text.Subtitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signOutMessage"
        style="@style/Text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/confirm_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutTitle" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/signOut"
        app:layout_constraintEnd_toStartOf="@+id/signOut"
        app:layout_constraintTop_toTopOf="@+id/signOut" />

    <Button
        android:id="@+id/signOut"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>